--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Django==2.0.7
 django-crispy-forms==1.11.1
-mysqlclient 
 Pillow==8.1.1
-PyMySQL==1.0.2
+django-heroku==0.3.1
+django-storages==1.7.1
+psycopg2==2.7.7
